--- a/index.html
+++ b/index.html
@@ -248,6 +248,10 @@
 
 
 
+        <!-- Código de instalación CLIENGO para https://strollnsmile.github.io/ -->
+        <script>(function(){var ldk=document.createElement('script');
+        ldk.type='text/javascript';ldk.async=true; ldk.src='https://s.cliengo.com/weboptimizer/5a1f8223e4b08c29d1b5fd6f/5a1f83d7e4b08c29d1b5ff57.js' ;var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ldk, s);})();
+        </script>
 
 
 
