--- a/index.html
+++ b/index.html
@@ -247,13 +247,14 @@
         <script src="js/agency.js"></script>
 
 
-
-        <!-- Código de instalación CLIENGO para https://strollnsmile.github.io/ -->
-        <script>(function(){var ldk=document.createElement('script');
-        ldk.type='text/javascript';ldk.async=true; ldk.src='https://s.cliengo.com/weboptimizer/5a1f8223e4b08c29d1b5fd6f/5a1f83d7e4b08c29d1b5ff57.js' ;var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ldk, s);})();
+        <!-- Código de instalación Cliengo para  strollnsmile.com/ -->
+        <script type="text/javascript">(function(){var ldk=document.createElement('script');
+        ldk.type='text/javascript';
+        ldk.async=true;
+        ldk.src='https://s.cliengo.com/weboptimizer/5a1f8223e4b08c29d1b5fd6f/5a1f8235e4b051546d9f8d17.js';
+        var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ldk, s);
+        })();
         </script>
-
-
 
 
 
