--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
         <header>
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">Affordable Dentistry Care</div>
-    				<div class="intro-lead-in">Welcome to a seamless experience</div>
-                    <div class="intro-lead-in">High Quality – Affordable Dental Care Made Simple</div>
+                    <div class="intro-heading">Start Your Vacation with a Wonderfull Smile</div>
+    				        <div class="intro-lead-in">Affordable Dentistry Care</div>
                     <a href="#services" class="page-scroll btn btn-xl">How It Works</a>
                 </div>
             </div>
@@ -83,15 +82,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Services</h2>
-                        <h3 class="section-subheading text-muted">Did you know that fees charged for dentistry in Latin America are
-						only a tenth to a quarter of what the same services would cost in
-						North America and Europe? </h3>
-    					<h3 class="section-subheading text-muted"> Book Unique and Affordable Dentistry Care from Local Clinics 						</h3>
-    					<h3 class="section-subheading text-muted"> What about making your trip to Ecuador the perfect opportunity to get that nuance with your teeth out of the way? </h3>
-    					<h3 class="section-subheading text-muted"> Book in advance for any simple dental treatment you may be needing, you just need a couple hours from your time in any major Ecuadorian city to come out with a fabulous new smile. </h3>
-
-						<h3 class="section-subheading text-muted"> Make the most of your trip by saving big money on your dental treatment, meeting a local friendly face, and getting to experience Ecuadorian hospitality first hand.</h3>
+                        <h2 class="section-heading">Facts</h2>
+                        <h3 class="section-subheading text-muted">* Did you know that fees charged for dentistry in Latin America are
+						only a tenth to a quarter of what the same services would cost in North America and Europe? </h3>
+    					<h3 class="section-subheading text-muted"> * Book Unique and Affordable Dentistry Care from Local Clinics 						</h3>
+    					<h3 class="section-subheading text-muted"> * What about making your trip to Ecuador the perfect opportunity to get that nuance with your teeth out of the way? </h3>
+    					<h3 class="section-subheading text-muted"> * Book in advance for any simple dental treatment you may be needing, you just need a couple hours from your time in any major Ecuadorian city to come out with a fabulous new smile. </h3>
+						  <h3 class="section-subheading text-muted"> * Make the most of your trip by saving big money on your dental treatment, meeting a local friendly face, and getting to experience Ecuadorian hospitality first hand.</h3>
+              <h3 class="section-subheading text-muted"> * High Quality – Affordable Dental Care Made Simple </h3>
 </div>
                 </div>
                 <div class="row text-center">
