--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Facts</h2>
+                        <h2 class="section-heading">Fact</h2>
                         <h3 class="section-subheading text-muted">* Did you know that fees charged for dentistry in Latin America are
 						only a tenth to a quarter of what the same services would cost in North America and Europe? </h3>
+              <h2 class="section-heading">Services</h2>
     					<h3 class="section-subheading text-muted"> * Book Unique and Affordable Dentistry Care from Local Clinics 						</h3>
     					<h3 class="section-subheading text-muted"> * What about making your trip to Ecuador the perfect opportunity to get that nuance with your teeth out of the way? </h3>
     					<h3 class="section-subheading text-muted"> * Book in advance for any simple dental treatment you may be needing, you just need a couple hours from your time in any major Ecuadorian city to come out with a fabulous new smile. </h3>
