--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </li>
 
                         <li class="">
-                            <a class="page-scroll" href="#contact">Notify</a>
+                            <a class="page-scroll" href="#contact">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -169,10 +169,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Notify</h2>
-                        <h3 class="section-subheading text-muted">Notify me once the fully functional site launches.
-
-</h3>
+                        <h2 class="section-heading">Contact Us</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -192,7 +189,7 @@
                                     <div id="success"></div>
                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                     <div style="position: absolute; left: -5000px;"><input type="text" name="b_3ab01c04621448c868bd23c40_6aad136474" tabindex="-1" value=""></div>
-                                    <button type="submit" class="btn btn-xl">Notify Me</button>
+                                    <button type="submit" class="btn btn-xl"> Send </button>
                                 </div>
                             </div>
                         </form>
