--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                                 <div class="col-md-6 col-md-offset-3">
 
                                     <div class="form-group error">
-                                        <input type="email" name="EMAIL" class="form-control" placeholder="Please enter your email address." id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+                                        <input type="email" name="EMAIL" class="form-control" placeholder="Please enter your email address." id="email" required="" data-validation-required-message= aria-invalid="true">
+                                        <p class="help-block text-danger"></p><ul role="alert"><li></li></ul><p></p>
                                     </div>
 
                                 </div>
