--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/39fe6aaef87738e9f22acb85b/78fef562e4408ee647e76fde2.js");</script>
 
     </head>
 
@@ -53,6 +54,9 @@
                             <a href="#page-top"></a>
                         </li>
                         <li class="">
+                            <a class="page-scroll" href="#services">Facts</a>
+                        </li>
+                        <li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
 
@@ -70,8 +74,8 @@
         <header>
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">Start Your Vacation with a Wonderfull Smile</div>
-    				        <div class="intro-lead-in">Affordable Dentistry Care</div>
+                    <div class="intro-heading">A SUPERB DENTAL CARE TRAVEL EXPERIENCE.</div>
+    				        <div class="intro-lead-in">Welcome to a destination where travelers have access to top quality, affordable dental care.</div>
                     <a href="#services" class="page-scroll btn btn-xl">How It Works</a>
                 </div>
             </div>
@@ -82,21 +86,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Fact</h2>
+                        <h2 class="section-heading">Facts</h2>
                     </div>
                     <div class="col-lg-12 text-justify">
-                      <h3 class="section-subheading text-muted">* Did you know that fees charged for dentistry in Latin America are
-                                                                  only a tenth to a quarter of what the same services would cost in North America and Europe? </h3>
+                      <h3 class="section-subheading text-muted">* Dental care fees in Latin American are only a tenth to a quarter of what the same services would cost in North America and Europe. </h3>
+                      <h3 class="section-subheading text-muted">* Ecuador is becoming a hub for dental tourism, given that most of the common procedures can be taken care of at an equivalent level of quality as North American and European counterparts, but at a fraction of the cost.</h3>
+                      <h3 class="section-subheading text-muted">* Many dentists in Ecuador’s most important cities have been educated in the U.S., are board certified, are bilingual, and are continuously undergoing continuing education. State-of-the-art equipment and modern offices can provide additional comfort for those who view the trip to the dentist as a kind of medieval torture session.</h3>
                     </div>
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Services</h2>
                     </div>
                     <div class="col-lg-12 text-justify">
-                    <h3 class="section-subheading text-muted"> * Book Unique and Affordable Dentistry Care from Local Clinics 						</h3>
-                    <h3 class="section-subheading text-muted"> * What about making your trip to Ecuador the perfect opportunity to get that nuance with your teeth out of the way? </h3>
-                    <h3 class="section-subheading text-muted"> * Book in advance for any simple dental treatment you may be needing, you just need a couple hours from your time in any major Ecuadorian city to come out with a fabulous new smile. </h3>
-                    <h3 class="section-subheading text-muted"> * Make the most of your trip by saving big money on your dental treatment, meeting a local friendly face, and getting to experience Ecuadorian hospitality first hand.</h3>
-                    <h3 class="section-subheading text-muted"> * High Quality – Affordable Dental Care Made Simple </h3>
+                    <h3 class="section-subheading text-muted"> * We make high quality, affordable health care from top local providers available to travelers. </h3>
+                    <h3 class="section-subheading text-muted"> * We help in making your trip to Ecuador the perfect opportunity to get that nuance with your teeth out of the way.</h3>
+                    <h3 class="section-subheading text-muted"> * We let you book in advance for any simple dental treatment you may be needing. You just need a couple hours from your time in any major Ecuadorian city to come out with a fabulous new smile.</h3>
+                    <h3 class="section-subheading text-muted"> * We provide information on the cost, location, credentials, and reviews of the service by different dental care providers, letting you choose the alternative that makes you feel comfortable.</h3>
+                    <h3 class="section-subheading text-muted"> * We provide transportation to and from the dental facility where you have booked your service.</h3>
+                    <h3 class="section-subheading text-muted"> * We ensure that you are fully satisfied with the dental treatment you have selected, and that you the whole experience matches or exceeds your expectations. </h3>
+                    <h3 class="section-subheading text-muted"> * We let you make the most of your trip by saving big money on your dental treatment, meeting a local friendly face, and getting to experience Ecuadorian hospitality first hand.</h3>
+                    <h3 class="section-subheading text-muted"> * Stroll'nSmile is an online platform that makes available to those visiting Ecuador, the excellent and affordable dental care services available to locals.</h3>
                     </div>
                 </div>
                 </div>
@@ -108,8 +116,7 @@
                             <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Market Place</h4>
-                        <p class="text-muted">Stroll'nSmile is an online marketplace that makes available to those travelers visiting Ecuador, the excellent and affordable dental care services available to locals.We let you choose the provider.
-</p>
+                        <p class="text-muted">We let customers easily find out about the location, facilities, credentials, and cost of the services by different dentists and clinics, and make a booking at their convenience.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -117,7 +124,7 @@
                             <i class="fa fa-star fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Ratings</h4>
-                        <p class="text-muted">Travelers can easily find out about the location, facilities, credentials, and cost of the services by different dentists and clinics, and also learn about the experiences of other travelers.</p>
+                        <p class="text-muted">Travelers can leave their comments and rate the service received, and also learn about the experiences of other travelers.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -125,7 +132,7 @@
                             <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Just Book and Relax</h4>
-                        <p class="text-muted">Book your appointment in advance. Once you book, we will pick you up from your hotel, hostel, or wherever you are accommodated, and will drive you back there once your dental appointment is successfully completed.</p>
+                        <p class="text-muted">Once you book, we will pick you up from your hotel, hostal, or wherever you are accommodated, and will drive you back there once your dental appointment is successfully completed. </p>
                     </div>
 
                     <div class="col-md-4">
@@ -134,7 +141,7 @@
                             <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">24/7 Support</h4>
-                        <p class="text-muted">Our team members are always there for you in rain, snow and sunshine.</p>
+                        <p class="text-muted">Our team members are always there for you in rain, snow and sunshine. </p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -142,9 +149,7 @@
                             <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Location</h4>
-                        <p class="text-muted">Stroll'nSmile is available in Quito, Guayaquil, and Cuenca. Soon expanding to other cities in Latin America.
-
-</p>
+                        <p class="text-muted">Stroll'nSmile is available in Quito, Guayaquil, and Cuenca. Soon expanding to other cities in Latin America.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -152,9 +157,7 @@
                             <i class="fa fa-building fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">For Dental Clinics and Dentists</h4>
-                        <p class="text-muted">You are most welcome to register your services with us, we will gladly offer them to the traveling community.
-
-</p>
+                        <p class="text-muted">You are most welcome to register your services with us, we will gladly offer them to the traveling community.</p>
                     </div>
 
                 </div>
@@ -174,23 +177,24 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
+<!--
                       <form action="https://strollnsmile.us17.list-manage.com/subscribe/post?u=39fe6aaef87738e9f22acb85b&amp;id=700c84fb68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div class="row">
                                 <div class="col-md-6 col-md-offset-3">
-
-                                    <div class="form-group error">
-                                        <input type="email" name="EMAIL" class="form-control" placeholder="Please enter your email address." id="email" required="" data-validation-required-message= aria-invalid="true">
-                                        <p class="help-block text-danger"></p><ul role="alert"><li></li></ul><p></p>
-                                    </div>
-
+                                  <div class="form-group">
+                                      <input type="email" name="EMAIL" class="form-control" placeholder="Please enter your email address." id="email" required="" data-validation-required-message= "Please enter your email address.">
+                                      <p class="help-block text-danger"></p>
+                                  </div>
                                 </div>
-                                <div class="clearfix"></div>
-                                <div class="col-lg-12 text-center">
+                                    <div class="clearfix"></div>
+                                    <div class="col-lg-12 text-center">
                                     <div id="success"></div>
                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-
-                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_39fe6aaef87738e9f22acb85b_700c84fb68" tabindex="-1" value=""></div>
-                                    <button type="submit" class="btn btn-xl"> Send </button>
+<!--                                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_39fe6aaef87738e9f22acb85b_700c84fb68" tabindex="-1" value=""></div>
+                                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>-->
+                                    <div class="clearfix"></div>
+                                    <div class="col-lg-12 text-center">
+                                    <button type="submit" class="btn btn-xl"> strollnsmile@gmail.com </button>
                                 </div>
                             </div>
                         </form>
